--- a/webfonts/index.html
+++ b/webfonts/index.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Giver</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-````<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-````<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <i class="fa-regular fa-download fa-5x"></i>
-    <script src="js/bootstrap.bundle.min.js "></script>
-    <!-- <script src="js/all.min.js"></script>  --> 
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/all.min.js"></script>
 </body>
 </html>
