--- a/web_static/0.index.html
+++ b/web_static/0.index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Giver</title>
+    <link rel="stylesheet" href="css/lifegiver.css"> <!-- Link to external CSS file -->
 </head>
 <body>
-    <div>
-        <img src="web_static/images/dsfeerwtg 1.png">
+    <header>
+        
+    </header>
+    <div class = "content">
+        <img src="images/dsfeerwtg 1.png" alt="give blood give life" width="800" height="600" style = "float:right">
     </div>
+    <footer>
+        <p>you can see our project on github</p>
+        <p><a href="https://github.com/zguaidh/Test_portofolio">Life Giver</a></p>
+    </footer>
 </body>
 </html>
