--- a/web_static/0.index.html
+++ b/web_static/0.index.html
@@ -5,17 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Giver</title>
     <link rel="stylesheet" href="css/lifegiver.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
+
 </head>
+<header>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#requests">Requests</a></li>
+        <li><a href="#urgent requests">Urgent requests</a></li>
+      </ul>      
+</header>
 <body>
-    <header>
-        
-    </header>
     <div class = "content">
         <img src="images/dsfeerwtg 1.png" alt="give blood give life" width="800" height="600" style = "float:right">
     </div>
-    <footer>
-        <p>you can see our project on github</p>
-        <p><a href="https://github.com/zguaidh/Test_portofolio">Life Giver</a></p>
-    </footer>
 </body>
+<footer>
+    <p>you can see our project on github</p>
+    <p><a href="https://github.com/zguaidh/Test_portofolio">Life Giver</a></p>
+</footer>
 </html>
