--- a/web_static/1.index.html
+++ b/web_static/1.index.html
@@ -110,7 +110,10 @@
             <a href="#" class="logo">
                 Life Giver
             </a>
-            <p><a href="https://github.com/zguaidh/Test_portofolio">Life Giver Github</a></p>
+            <p>
+                <img src="images/github.svg" alt="Github">
+                <a href="https://github.com/zguaidh/Test_portofolio">Life Giver _ Github</a>
+            </p>
         </div>
     </footer>
 </body>
