--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/all.min.css" />
-    <title>Life Giver</title>
+    <title>Donor registration</title>
 </head>
 
 <body>
