--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -4,28 +4,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Life Giver</title>
-    <link rel="stylesheet" href="css/lifegiver.css"> <!-- Link to external CSS file -->
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
-
+    <link rel="stylesheet" href="css/0-style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/all.min.css" />
+    <title>Donor registration</title>
 </head>
-<header>
-    <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#requests">Requests</a></li>
-        <li><a href="#urgent requests">Urgent requests</a></li>
-    </ul>
-</header>
 
 <body>
-    <div class="content">
-        <img src="images/dsfeerwtg 1.png" alt="give blood give life" width="800" height="600" style="float:right">
+    <header>
+        <div class="container">
+            <a href="#" class="logo">
+                Life Giver
+            </a>
+            <nav>
+                <ul>
+                    <li><a class="active" href="#">Home</a></li>
+                    <li><a href="#">Donors</a></li>
+                    <li><a href="#">Requests</a></li>
+                    <li><a href="#">Urgent Requests</a></li>
+                    <li><a href="#">Dashboard</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div class="landing">
+        <div>
+            <img src="images/dsfeerwtg 1.png" alt="give blood give life" width="800" height="600" style="float:right">
+        </div>
+        <div class="content">
+        <nav>
+            <ul>
+                <li><a href="#">New Donor</a></li>
+                <li><a href="#">Existing Donor</a></li>
+                <li><a href="#">Hospital</a></li>
+            </ul>
+        </nav>
+        </div>
     </div>
+    <footer>
+        <div class="container">
+            <a href="#" class="logo">
+                Life Giver
+            </a>
+            <p>
+                <img src="images/github.svg" alt="Github">
+                <a href="https://github.com/zguaidh/Test_portofolio">Life Giver _ Github</a>
+            </p>
+        </div>
+    </footer>
 </body>
-<footer>
-    <p>you can see our project on github</p>
-    <p><a href="https://github.com/zguaidh/Test_portofolio">Life Giver</a></p>
-</footer>
 
 </html>
