update in front end

--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/all.min.css" />
-    <title>Donor registration</title>
+    <title>Hospital registration</title>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
     <div class="landing">
         <div class="card">
             <div class="imgBx">
-                <img src="images/download (1).jpg">
+                <img src="images/e899767dc309b38148167a8540225870.png">
             </div>
             <div class="infrBx">
                 <h1>Please enter your information</h1>
@@ -67,8 +67,8 @@
                     <input type="tel" placeholder="Zip Code">
                 </div>
                 <div class="input_feild">
-                    <label for="Bar Code">Bar Code</label>
-                    <input type="password" placeholder="Bar Code">
+                    <label for="Bar Code">Serial Number</label>
+                    <input type="text" placeholder="Serial Number">
                 </div>
                 <div class="input_feild">
                     <label for="Registeration Date">Registeration Date</label>
