--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -43,7 +43,7 @@
                     <label for="Password">Password</label>
                     <input type="password" placeholder="Password" id="password">
                 </div>
-                <button>Login in</button>
+                <button>Log in</button>
             </div>
         </div>
     </div>
