--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="icon" href="images/droplet-solid.svg">
     <title>Hospital registration</title>
 </head>
 
