--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -18,16 +18,15 @@
 <body>
     <header>
         <div class="container">
-            <a href="#" class="logo">
+            <a href="0-index.html" class="logo">
                 Life Giver
             </a>
             <nav>
                 <ul>
-                    <li><a class="active" href="#">Home</a></li>
-                    <li><a href="#">Donors</a></li>
-                    <li><a href="#">Requests</a></li>
-                    <li><a href="#">Urgent Requests</a></li>
-                    <li><a href="#">Dashboard</a></li>
+                    <li><a class="active" href="0-index.html">Home</a></li>
+                    <li><a href="5-index.html">Requests</a></li>
+                    <li><a href="6-index.html">Urgent Requests</a></li>
+                    <li><a href="7-index.html">Dashboard</a></li>
                 </ul>
             </nav>
         </div>
@@ -41,7 +40,7 @@
             <div class="infrBx">
                 <div class="donor">
                     <p>Donor</p>
-                    <a href="#">Log in</a>
+                    <a href="4-index.html">Log in</a>
                     <a href="1-index.html">Sign up</a>
                 </div>
                 <div class="hospital">
@@ -64,7 +63,7 @@
                                 <path
                                     d="M192 48c0-26.5 21.5-48 48-48H400c26.5 0 48 21.5 48 48V512H368V432c0-26.5-21.5-48-48-48s-48 21.5-48 48v80H192V48zM48 96H160V512H48c-26.5 0-48-21.5-48-48V320H80c8.8 0 16-7.2 16-16s-7.2-16-16-16H0V224H80c8.8 0 16-7.2 16-16s-7.2-16-16-16H0V144c0-26.5 21.5-48 48-48zm544 0c26.5 0 48 21.5 48 48v48H560c-8.8 0-16 7.2-16 16s7.2 16 16 16h80v64H560c-8.8 0-16 7.2-16 16s7.2 16 16 16h80V464c0 26.5-21.5 48-48 48H480V96H592zM312 64c-8.8 0-16 7.2-16 16v24H272c-8.8 0-16 7.2-16 16v16c0 8.8 7.2 16 16 16h24v24c0 8.8 7.2 16 16 16h16c8.8 0 16-7.2 16-16V152h24c8.8 0 16-7.2 16-16V120c0-8.8-7.2-16-16-16H344V80c0-8.8-7.2-16-16-16H312z" />
                             </svg>
-                            <p>EL Hiah Hospital</p>
+                            <p>Dar EL-Salam Hospital</p>
                         </div>
                         <div class="blood">
                             <svg xmlns="http://www.w3.org/2000/svg"
@@ -80,9 +79,9 @@
                                 <path fill="#002aff"
                                     d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
                             </svg>
-                            <p>Location: Ahmed Oraby street Cairo, Egypt </p>
+                            <p>Location: Al Kafour,Old Cairo, Egypt</p>
                         </div>
-                        <button><a href="">Donate Now</a></button>
+                        <button><a href="6-index.html">Donate Now</a></button>
                 </div>
                 <div class="ads2">
                         <div class="hospital">
@@ -90,7 +89,7 @@
                                 <path
                                     d="M192 48c0-26.5 21.5-48 48-48H400c26.5 0 48 21.5 48 48V512H368V432c0-26.5-21.5-48-48-48s-48 21.5-48 48v80H192V48zM48 96H160V512H48c-26.5 0-48-21.5-48-48V320H80c8.8 0 16-7.2 16-16s-7.2-16-16-16H0V224H80c8.8 0 16-7.2 16-16s-7.2-16-16-16H0V144c0-26.5 21.5-48 48-48zm544 0c26.5 0 48 21.5 48 48v48H560c-8.8 0-16 7.2-16 16s7.2 16 16 16h80v64H560c-8.8 0-16 7.2-16 16s7.2 16 16 16h80V464c0 26.5-21.5 48-48 48H480V96H592zM312 64c-8.8 0-16 7.2-16 16v24H272c-8.8 0-16 7.2-16 16v16c0 8.8 7.2 16 16 16h24v24c0 8.8 7.2 16 16 16h16c8.8 0 16-7.2 16-16V152h24c8.8 0 16-7.2 16-16V120c0-8.8-7.2-16-16-16H344V80c0-8.8-7.2-16-16-16H312z" />
                             </svg>
-                            <p>EL Hiah Hospital</p>
+                            <p>Coptic Hospital</p>
                         </div>
                         <div class="blood">
                             <svg xmlns="http://www.w3.org/2000/svg"
@@ -106,8 +105,8 @@
                                 <path fill="#002aff"
                                     d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
                             </svg>
-                            <p>Location: EL Zamalk street Cairo, Egypt </p>
-                            <button><a href="">Donate Now</a></button>
+                            <p>Location: El-Zaher ,Cairo ,Egypt</p>
+                            <button><a href="6-index.html">Donate Now</a></button>
                         </div>
                 </div>
             </div>
