--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,19 +14,19 @@
     <link rel="icon" href="images/droplet-solid.svg">
     <title>Hospital Login</title>
 </head>
+
 <body>
     <header>
         <div class="container">
-            <a href="#" class="logo">
+            <a href="0-index.html" class="logo">
                 Life Giver
             </a>
             <nav>
                 <ul>
-                    <li><a class="active" href="#">Home</a></li>
-                    <li><a href="#">Donors</a></li>
-                    <li><a href="#">Requests</a></li>
-                    <li><a href="#">Urgent Requests</a></li>
-                    <li><a href="#">Dashboard</a></li>
+                    <li><a class="active" href="0-index.html">Home</a></li>
+                    <li><a href="5-index.html">Requests</a></li>
+                    <li><a href="6-index.html">Urgent Requests</a></li>
+                    <li><a href="7-index.html">Dashboard</a></li>
                 </ul>
             </nav>
         </div>
@@ -60,4 +61,5 @@
         </div>
     </footer>
 </body>
+
 </html>
