--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -18,16 +18,15 @@
 <body>
     <header>
         <div class="container">
-            <a href="#" class="logo">
+            <a href="0-index.html" class="logo">
                 Life Giver
             </a>
             <nav>
                 <ul>
-                    <li><a class="active" href="#">Home</a></li>
-                    <li><a href="#">Donors</a></li>
-                    <li><a href="#">Requests</a></li>
-                    <li><a href="#">Urgent Requests</a></li>
-                    <li><a href="#">Dashboard</a></li>
+                    <li><a class="active" href="0-index.html">Home</a></li>
+                    <li><a href="5-index.html">Requests</a></li>
+                    <li><a href="6-index.html">Urgent Requests</a></li>
+                    <li><a href="7-index.html">Dashboard</a></li>
                 </ul>
             </nav>
         </div>
